# jsonschema-validator

./: .activate.sh  .appveyor.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  rust-toolchain  tox.ini
.github/: ISSUE_TEMPLATE.md
scripts/: bash-scripts-are-executable.sh  bump-all-submodules.sh  cargo-features.sh  cargo-project-name.sh  cargo-version.sh  shellcheck.sh
scripts/travis/: before_script.sh  install.sh
src/: lib.rs  macros.rs  prelude.rs  testing_helpers.rs  testing_prelude.rs  url_helpers.rs
src/cache/: implementation.rs  mod.rs  stats.rs
src/drafts/: draft4.rs  macros.rs  mod.rs
src/integration_tests/: draft4.rs  mod.rs
src/iterator_utils/: empty_iterator.rs  generator_iterator.rs  mod.rs
src/keywords/: keyword.rs  mod.rs  multipleof_.rs  properties_.rs  ref_.rs  required_.rs  type_.rs
src/keywords/common/: _properties.rs  _type.rs  mod.rs
src/loaders/: json.rs  loader_macros.rs  mod.rs  testing.rs  yaml.rs
src/schema/: builder.rs  mod.rs  scope.rs  testing.rs  validation_errors.rs
src/types/: draft_version.rs  enum_primitive_type.rs  index.rs  json.rs  keyword_type.rs  mod.rs  object.rs  primitive_type.rs  schema.rs  schema_error.rs  scope.rs  scope_builder.rs  testing.rs  validation_error.rs  validator.rs  validator_error_iterator.rs  yaml.rs
tests/: integration_tests.rs
