[package]
authors = ["Samuele Maci <macisamuele@gmail.com>"]
edition = "2018"
keywords = ["json", "jsonschema"]
license = "MIT License"
name = "jsonschema-validator"
readme = "README.md"
publish = false
version = "0.1.0"
build = "build.rs"

[badges]
appveyor = { repository = "macisamuele/jsonschema-validator", branch = "master", service = "github"}
codecov = { repository = "macisamuele/jsonschema-validator", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "macisamuele/jsonschema-validator" }
is-it-maintained-open-issues = { repository = "macisamuele/jsonschema-validator" }
maintenance = { status = "experimental" }  # TODO: update it to actively-developed, passively-maintained or as-is
travis-ci = { repository = "macisamuele/jsonschema-validator", branch = "master" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[features]
default = ["json", "parallel", "regular_expression", "yaml"]
json = ["serde_json"]
nightly = []
parallel = ["rayon"]
regular_expression = ["regex"]
yaml = ["serde_yaml"]
testing = ["mockito"]

[build-dependencies]
version_check = "0.1.5"

[dev-dependencies]
conv = "0.3.3"
lazy_static = "1.2.0"
mockito = "0.17.0"
serde = "1.0.88"
serde_derive = "1.0.88"
test-case-derive = { git = "https://github.com/macisamuele/test-case-derive.git", branch = "maci-allow-build-on-stable" }

[dependencies]
named_type = "0.2.1"
named_type_derive = "0.2.1"
reqwest = "0.9.9"
strum = "0.14.0"
strum_macros = "0.14.0"
url = "1.7.2"

[dependencies.mockito]
version = "0.17.0"
optional = true

[dependencies.rayon]
version = "1.0.3"
optional = true

[dependencies.regex]
version = "1.1.0"
optional = true

[dependencies.serde_json]
version = "1.0.38"
optional = true

[dependencies.serde_yaml]
version = "0.8.8"
optional = true
