[package]
authors = ["Samuele Maci <macisamuele@gmail.com>"]
description = "Multi-Draft JSON Schema Validator"
repository = "https://github.com/macisamuele/jsonschema-validator"
edition = "2018"
keywords = ["json", "jsonschema", "validator"]
license = "MIT"
name = "jsonschema-validator"
readme = "README.md"
publish = true
version = "0.0.0"

[badges]
codecov = { repository = "macisamuele/jsonschema-validator", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "macisamuele/jsonschema-validator" }
is-it-maintained-open-issues = { repository = "macisamuele/jsonschema-validator" }
maintenance = { status = "experimental" }

[package.metadata.docs.rs]
all-features = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[features]
default = []

[dev-dependencies]
loader-rs = { version = "0", features = ["json-loader", "testing-helpers"] }
test-case = "1"

[dependencies]
failure = "0"
json-trait-rs = "0"
loader-rs = "0"
strum = "0"
strum_macros = "0"
url = "2"
uuid = { version = "0.8", features = ["v4"] }

[patch.crates-io]
loader-rs = { git = "https://github.com/macisamuele/loader-rs" }
json-trait-rs = { git = "https://github.com/macisamuele/json-trait-rs" }
